--- a/screen.html
+++ b/screen.html
@@ -117,18 +117,24 @@
                 </div>
             </aside>
         </div>
+        <div class="adauga"><input type="text" placeholder="Adauga informatii noi despre anotimpurile din 2023" name="text" size="180" /><input
+                type="submit" /><input type="Reset"/> </div>
         <div class="flex">
             <section class="coloane">
-                <p>Col1</p>
+                <h2>Iarna</h2>
+                <ul id="iarna"></ul>
             </section>
             <section class="coloane">
-                <p>Col1</p>
+                <h2>Primavara</h2>
+                <ul id="primavara"></ul>
             </section>
             <section class="coloane">
-                <p>Col1</p>
+                <h2>Vara</h2>
+                <ul id="vara"></ul>
             </section>
             <section class="coloane">
-                <p>Col1</p>
+                <h2>Toamna</h2>
+                <ul id="toamna"></ul>
             </section>
         </div>
     </div>
